--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -17,6 +17,6 @@ jobs:
       - name: Push artifacts to pypi
         run: python3 -m twine upload 
             --repository pypi 
-            --username ${{ secrets.PYPI_USERNAME }} 
-            --password ${{ secrets.PYPI_PASSWORD }} 
+            --username __token__
+            --password ${{ secrets.PYPI_API_KEY }} 
             dist/*
