changed trigger to push only on branch main and workflow dispatch

--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -1,5 +1,10 @@
 name: Publish Package to pypi
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
 jobs:
   build_and_publish:
     runs-on: python:latest
