--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   build_and_publish:
-    runs-on: python:latest
+    runs-on: [self-hosted, linux-x64]
+
     steps:
       - name: Install build dependencies
         run: python3 -m pip install build twine
